[ dark styling ] dark mode bugs fixed, card, external card add hover effects

--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -1,3 +1,7 @@
+html[data-theme="dark"] .iom-card:hover {
+  background-color: var(--ifm-color-gray-800);
+}
+
 .iom-card {
   background: var(--ifm-card-background-color);
   border: 1px solid rgba(0, 0, 0, 0.12);
@@ -9,8 +13,9 @@
   cursor: pointer;
 
   &:hover {
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    // border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.04);
+    background-color: var(--docsearch-modal-background);
   }
 
   a {
