--- a/src/components/FlexButton/style.scss
+++ b/src/components/FlexButton/style.scss
@@ -1,3 +1,9 @@
+html[data-theme="dark"] .iom-btn-flex {
+  // background-color: black;
+  color: black;
+  // border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 .iom-btn-flex {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.12);
